	PR gcov-profile/48845 	* config/sol2.h (LIB_SPEC): Link TLS support for tree profiling.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174119 138bc75d-0d04-0410-961f-82ee72b054a4